--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+
     <!-- Container della pagina -->
     <div class="container">
+
       <!-- Testata della pagina -->
       <header>
         <div class="header-top">
-
+          <div class="header-logo">
+            <img src="img/natural-logo.png" alt="logo1">
+            <h2>Another Beautiful Organic Theme</h2>
+          </div>
         </div>
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Page Templates</li>
+            <li><a href="#"></a>A Parent Page</li>
+            <li><a href="#"></a>Blog</li>
+            <li><a href="#"></a>Contact</li>
+          </ul>
+        </nav>
       </header>
       <!-- /Testata della pagina -->
+
+
 
       <!-- Corpo principale -->
       <main>
