--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <nav>
           <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Page Templates</li>
-            <li><a href="#"></a>A Parent Page</li>
-            <li><a href="#"></a>Blog</li>
-            <li><a href="#"></a>Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Page Templates</a></li>
+            <li><a href="#">A Parent Page</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </header>
