--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
       <main>
         <!-- Sezione dei temi -->
         <aside class="temi float-left">
+          <div class="temi-top">
+            <div class="temi-icona float-left">
+              <i class="fas fa-rss-square"></i>
+            </div>
+           <div class="temi-titolo">
+
+           </div>
+           <ul>
+             <li><a href="#">How To Pick A WordPress theme for 2019</a></li>
+             <li><a href="#">The Update Gutenberg Portfolio Theme</a></li>
+             <li><a href="#">Black Friday Through Cyber Monday Deal For WordPress Website Owners</a></li>
+             <li><a href="#">The Ultimate Guide To Optimizing Your WordPress Theme For Gutenberg</a></li>
+             <li><a href="#">a Better WordPress Page Builder - Organic Builder Widgets Pro</a></li>
+           </ul>
+
+          </div>
 
         </aside>
         <!-- Sezione dei temi -->
