--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Layaout</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   </head>
   <body>
 
@@ -42,7 +43,7 @@
               <i class="fas fa-rss-square"></i>
             </div>
            <div class="temi-titolo">
-
+             <h2>Organic Themes</h2>
            </div>
            <ul>
              <li><a href="#">How To Pick A WordPress theme for 2019</a></li>
@@ -59,19 +60,23 @@
 
         <!-- Sezione articoli -->
         <section class="articoli float-left">
-
+         <h1>Three Colum</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
         <!-- /Sezione articoli -->
 
         <aside class="widgets float-left">
           <div class="widget">
-
+            <h2>Text Widget</h2>
+            <p>This is an example of a text widget. you could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
           </div>
           <div class="widget">
-
+            <h2>Text Widget</h2>
+            <p>This is an example of a text widget. you could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
           </div>
           <div class="widget">
-
+            <h2>Text Widget</h2>
+            <p>This is an example of a text widget. you could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
           </div>
         </aside>
 
