--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
 
 
     <footer>
+      <div class="copyright">
+        <span>Pagina realizzata da Nicola Lusso</span>
+      </div>
+      <hr>
+      <div class="social">
+        <ul class="social-loghi">
+          <li class="float-left">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+          </li>
+          <li class="float-left">
+            <a href="#"><i class="fab fa-instagram-square"></i></a>
+          </li>
+          <li class="float-left">
+            <a href="#"><i class="fab fa-snapchat-square"></i></a>
+          </li>
+        </ul>
+      </div>
 
     </footer>
   </div>
